--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ИБ 2026 Трансформация</title>
+    <title>Опросники</title>
     <link rel="stylesheet" href="/src/assets/main.css">
   </head>
   <body>
